--- a/style.css
+++ b/style.css
@@ -104,9 +104,7 @@ main > hr {
 
 html {
 	background: #485564;
-	//background-image: url('https://pli.io/NLkJn.jpg');
-	background-image: url('https://pli.io/NLlzx.jpg');
-	//background-image: url('https://pli.io/NLnEJ.jpg');
+	background-image: url('NLlzx.jpg');
 	background-size: cover;
 	background-position: center center;	
 }
